staff show list, UI